--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@ body {
     padding: 0.5rem;
 }
 
-
+\\
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 .sidebar {
     background-color: #000;
